--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h3>This is Latika's Portfolio index page. Just starting out...</h3>
   <figure>
-    <img class="photo" src="lphoto.jpg" alt="Photo of Portfolio Owner" width="300" height="179">
+    <img class="photo" src="lphoto.jpg" alt="Photo of Portfolio Owner" width="300" height="179" />
     <figcaption>Looking for something?</figcaption>
   </figure>
   <div class="lorem">Placeholder text. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
